fixing the collapse issue

--- a/src/App.css
+++ b/src/App.css
@@ -90,8 +90,6 @@ input:focus{
 }
 
 .form-box{
-  margin-left:auto;
-  margin-right:auto;
   text-align: center;
   width:100%;
   display:flex;
@@ -105,6 +103,7 @@ input:focus{
  color:white;
 min-width:350px;
 max-width: 500px;
+
 }
 
 .btn2{
@@ -170,7 +169,7 @@ background:linear-gradient(
 }
 .cards-box{
     display:grid;
-    grid-template-columns:repeat(2,1fr);
+    grid-template-columns:repeat(4,1fr);
     margin-top:30px;
     gap:20px;
       background:
@@ -182,19 +181,21 @@ background:linear-gradient(
     );
   border:1px solid rgba(168,85,247,0.3);
   border-radius:24px;
-  padding:8px;
+  padding:12px;
   box-shadow:
   0 0 25px rgba(168,85,247,0.15),
   0 0 50px rgba(59,130,246,0.08);
   backdrop-filter:blur(10px);
+  min-height: 110px;
 }
 .card1,.card2,.card3,.card4{
   display: flex;
  text-align:center;
   border-radius:18px;
   padding:5px 8px;
+  height:240px;
   transition:0.3s ease;
-  min-height:220px;
+  min-height:110px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -261,10 +262,9 @@ background:linear-gradient(
 }
 
 .main-layout{
-
    display: flex;
   flex-direction: row;        
-  justify-content: center;
+  justify-content: space-between;
   gap: 30px;
   padding: 40px;
   align-items: start;
@@ -299,7 +299,7 @@ height:350px;
   overflow: hidden; 
   box-sizing:border-box;
     border-radius:24px;
-    padding:30px;
+    padding:25px;
  background:rgba(17,24,39,0.85);
     border:1px solid rgba(168,85,247,0.25);
     box-shadow:    0 0 30px rgba(168,85,247,0.12);
@@ -341,6 +341,12 @@ height:350px;
  font-size: large;
 }
 .left{
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
    width: 500px;
   transition: all 0.4s ease;
 }
